# VendorCat

./: .gitignore  .ruff.toml  .tmp_archive_rebuild_sql.py  .tmp_check_v1_bridge.py  .tmp_extract_local_tables.py  .tmp_sql_token_check.py  COMMIT_PR_BUNDLE_3.md  COMMIT_PR_BUNDLE_3.ps1  DELIVERY_SUMMARY.md  PR_BUNDLE_2_SUMMARY.md  PR_BUNDLE_3_SUMMARY.md  PR_BUNDLE_3_UAT.md  README.md  REPOSITORY_STRUCTURE.md  add_user_notebook.sql  add_user_to_directory.py  databricks.yml  init_local_db.bat  launch_app.bat  launch_app_admin.bat  launch_app_dev_pat.bat  launch_app_editor.bat  launch_app_reviewer.bat  launch_app_viewer.bat  launch_app_watcher.bat  launch_rebuild.bat  launch_rebuild_admin.bat  launch_rebuild_editor.bat  launch_rebuild_reviewer.bat  launch_rebuild_viewer.bat  launch_rebuild_watcher.bat  mypy-rebuild.ini  push_changes.py  pyproject.toml  requirements-rebuild.txt  tmp_share_699603f8.html  tmp_share_699603f8_text.txt
VendorCat Rework/VendorCat-main/: .gitignore  .pylintrc  .ruff.toml  .tmp_extract_dbx_tables.py  .tmp_gen_wave1b_local.py  .tmp_make_dbx06.py  .tmp_missing_after_hardening.py  PR_BUNDLE_3_PLAN.md  PUSH_PR_BUNDLE_2.md  PUSH_PR_BUNDLE_3.md  init_local_db.bat  launch_app.bat  launch_app_dev_pat.bat  launch_app_simple.bat  pr3_body.md  pyproject.toml  update_pr3.py
VendorCat Rework/VendorCat-main/.github/: CODEOWNERS
VendorCat Rework/VendorCat-main/app/: README.md  __init__.py  app.dev_local.yaml  databricks.yml  requirements.txt
VendorCat Rework/VendorCat-main/app/vendor_catalog_app/: repository.py
VendorCat Rework/VendorCat-main/docs/: CHANGELOG.md  production-readiness.md  user-guide.md
VendorCat Rework/VendorCat-main/docs/architecture/: 04-data-model-unity-catalog.md  05-security-governance.md  06-ingestion-pipelines.md  07-application-architecture.md  08-router-modularization-plan.md  09-unicorn-makeover-execution-plan.md  11-risk-register.md  13-v1-data-layer-rebuild.md  README.md
VendorCat Rework/VendorCat-main/docs/configuration/: environment-variables.md
VendorCat Rework/VendorCat-main/docs/database/: README.md  business-unit-data-dictionary.md  business-unit-legacy-canonical-mapping.md  business-unit-reset-erd.md
VendorCat Rework/VendorCat-main/docs/governance/: import-unknown-value-governance.md
VendorCat Rework/VendorCat-main/docs/operations/: ci-quality-gates.md  (+2 more)
VendorCat Rework/VendorCat-main/setup/: README.md
VendorCat Rework/VendorCat-main/tests/: conftest.py  test_access_requests.py  test_admin_role_management.py  test_business_unit_governance_guards.py  test_dashboard_routes.py  test_db_auth.py  test_doc_link_utils.py  test_error_pages.py  test_forbidden_page.py  test_imports_parsing.py  test_imports_routes.py  test_local_db_bootstrap.py  test_lookup_scd.py  test_rbac_coverage.py  test_reports.py  test_user_directory.py  test_vendor_flows.py  test_workflow_controls.py
(+1198 files in other folders)
