[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vendorcatalog"
version = "2026.02.27"
description = "Canonical Vendor Catalog runtime"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests_rebuild"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--strict-markers --tb=short -v"
markers = [
    "integration: Integration tests that require database",
    "e2e: End-to-end tests that require full app running",
    "slow: Tests that take longer than 1 second",
]

[tool.coverage.run]
source = ["src/apps", "src/vendorcatalog_rebuild"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
