[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vendorcatalog"
version = "2026.02.15"
description = "Vendor Catalog Application"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--strict-markers --tb=short -v"
markers = [
    "integration: Integration tests that require database",
    "e2e: End-to-end tests that require full app running",
    "slow: Tests that take longer than 1 second"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten over time
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

# Per-module options (tighten for new code)
[[tool.mypy.overrides]]
module = "app.vendor_catalog_app.web.security.*"
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "app.vendor_catalog_app.core.*"
disallow_untyped_defs = true

[tool.coverage.run]
source = ["app/vendor_catalog_app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "app/vendor_catalog_app/__init__.py"
]

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.coverage.html]
directory = "htmlcov"
